--- a/H4.md
+++ b/H4.md
@@ -6,7 +6,7 @@ I personally use contactless payment with my credit/debit card, as well as have 
 
 ## Explore APDU command structure
 
-I looked at the [Rust documentation](https://docs.rs/apdu/latest/apdu/) regarding the APDU command structure, it consists of Header: CLA INS P1 P2 and the body which may have LC then the payload and LE. Header is always required where as the body is variable. From my understanding LC calculates it's value from the payload that is sent and LE is whether a response is expected from the device and what length is expected, so the LE is always sent when you are sending data and LE is sent when you are expecting to receive data or a combination of both if you are sending data and expecting a response.
+I looked at the [Rust documentation](https://docs.rs/apdu/latest/apdu/) regarding the APDU command structure, it consists of Header: CLA INS P1 P2 and the body which may have LC then the payload and LE. Header is always required where as the body is variable. From my understanding LC calculates it's value from the payload that is sent and LE is whether a response is expected from the device and what length is expected, so the LC is always sent when you are sending data and LE is sent when you are expecting to receive data or a combination of both if you are sending data and expecting a response.
 
 ## Find and research an article regarding RFID hacking
 
